<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.prosilion</groupId>
  <artifactId>afterimage</artifactId>
  <version>0.2.0</version>
  <name>afterimage</name>
  <description>AfterImage Reputation Relay</description>
  <packaging>war</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.5</version>
  </parent>

  <properties>
    <java.version>21</java.version>
    <spring-boot.version>${parent.version}</spring-boot.version>
    <nostr-java-core.version>0.0.1</nostr-java-core.version>

    <awaitility.version>4.2.0</awaitility.version>
    <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
    <commons-lang3.version>3.17.0</commons-lang3.version>
    <guava.version>33.2.1-jre</guava.version>
    <h2.version>2.2.224</h2.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <jackson-module-afterburner.version>2.18.3</jackson-module-afterburner.version>
    <junit-jupiter.version>5.10.2</junit-jupiter.version>
    <lombok.version>1.18.34</lombok.version>
    <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>

    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.3.0</maven-surefire-plugin.version>
    <maven-failsafe-plugin.version>3.3.0</maven-failsafe-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <mysql-connector-j.version>9.1.0</mysql-connector-j.version>
    <postgresql.version>42.7.3</postgresql.version>
    <subdivisions.version>1.2.0</subdivisions.version>
    <superconductor.version>1.14.1</superconductor.version>
    <testcontainers.version>1.20.6</testcontainers.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.maven.plugin-tools</groupId>
        <artifactId>maven-plugin-annotations</artifactId>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-websocket</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>com.prosilion</groupId>
      <artifactId>nostr-java-core</artifactId>
      <version>${nostr-java-core.version}</version>
    </dependency>

    <dependency>
      <groupId>com.prosilion.superconductor</groupId>
      <artifactId>starter</artifactId>
      <version>${superconductor.version}</version>
    </dependency>
    <dependency>
      <groupId>com.prosilion</groupId>
      <artifactId>subdivisions</artifactId>
      <version>${subdivisions.version}</version>
    </dependency>
    
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId>
      <artifactId>jackson-module-afterburner</artifactId>
      <version>${jackson-module-afterburner.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-docker-compose</artifactId>
      <version>${spring-boot.version}</version>
      <!--      <optional>true</optional>-->
      <scope>runtime</scope>
    </dependency>

    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>${mysql-connector-j.version}</version>
      <!--      TODO: try remove below if all works after commit -->
      <!--      <optional>true</optional>-->
      <scope>runtime</scope>
    </dependency>
    <!--    <dependency>-->
    <!--      <groupId>org.postgresql</groupId>-->
    <!--      <artifactId>postgresql</artifactId>-->
    <!--      <version>${postgresql.version}</version>-->
    <!--      <scope>runtime</scope>-->
    <!--    </dependency>-->
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <version>${h2.version}</version>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-thymeleaf</artifactId>
      <version>${spring-boot.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>${commons-lang3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>${awaitility.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit-jupiter.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <version>${spring-boot.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-testcontainers</artifactId>
      <version>${spring-boot.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${testcontainers.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>${project.artifactId}-${project.version}</finalName>
    <plugins>

      <!--      below:                                                      -->
      <!--          afterimage as a non-executable fatJar/dependency    -->
      <!--      if useful for you, simply uncomment below for inclusion     -->
      <!--                                                                  -->
      <!--      <plugin>-->
      <!--        <groupId>org.apache.maven.plugins</groupId>-->
      <!--        <artifactId>maven-assembly-plugin</artifactId>-->
      <!--        <configuration>-->
      <!--          <descriptorRefs>-->
      <!--            <descriptorRef>jar-with-dependencies</descriptorRef>-->
      <!--          </descriptorRefs>-->
      <!--        </configuration>-->
      <!--        <executions>-->
      <!--          <execution>-->
      <!--            <id>make-assembly</id>-->
      <!--            <phase>package</phase>-->
      <!--            <goals>-->
      <!--              <goal>single</goal>-->
      <!--            </goals>-->
      <!--          </execution>-->
      <!--        </executions>-->
      <!--      </plugin>-->

<!--      <plugin>-->
<!--        <groupId>org.springframework.boot</groupId>-->
<!--        <artifactId>spring-boot-maven-plugin</artifactId>-->
<!--        <configuration>-->
<!--          <image>-->
<!--            <builder>paketobuildpacks/builder-jammy-base:latest</builder>-->
<!--          </image>-->
<!--        </configuration>-->
<!--      </plugin>-->
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>test</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
              <configuration>
                  <rerunFailingTestsCount>1</rerunFailingTestsCount>
              </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>local_ws</id>
      <properties>
        <spring.profiles.active>local_ws</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>local_wss</id>
      <properties>
        <spring.profiles.active>local_wss</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>dev_ws</id>
      <properties>
        <spring.profiles.active>dev_ws</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>dev_wss</id>
      <properties>
        <spring.profiles.active>dev_wss</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>prod_ws</id>
      <properties>
        <spring.profiles.active>prod_ws</spring.profiles.active>
      </properties>
    </profile>
    <profile>
      <id>prod_wss</id>
      <properties>
        <spring.profiles.active>prod_wss</spring.profiles.active>
      </properties>
    </profile>
  </profiles>
</project>
